--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 html,
 body,
@@ -9,4 +9,8 @@ body,
     width: 100%;
     height: 100%;
     background: ivory;
+}
+
+.r3f-canvas {
+    touch-action: none;
 }
